# recruiting-sw-telemetry

project_1/: .gitignore  CMakeLists.txt  readme.md
project_1/core/: app.cpp  app.h  authentication.cpp  authentication.h  common_imports.h  data_management.cpp  data_management.h  data_structs.h  loginTab.cpp  loginTab.h  main.cpp  plots.cpp  plots.h  userTabs.cpp  userTabs.h
project_1/telemetry/: HAM.csv  LEC.csv  VER.csv
project_2/: .gitignore  CMakeLists.txt  fake_receiver.c  main.cpp
project_2/fake_receiver/: fake_receiver.h
project_2/parser/: parser.cpp  parser.h
project_2/reader/: reader.cpp  reader.h
project_2/statistics/: statistics.cpp  statistics.h
project_2/utils/: timestamp.cpp  timestamp.h
